--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,19 +1,17 @@
 <div class="container-body" [class.container-body-mobile]="mobileView">
   <div id="banner" class="banner">
     <div class="banner-info">
-      <span *ngIf="mobileView" style="text-align: center" class="title"
-        >Sân bay <br />
-        Đà Nẵng - Hội An</span
-      >
-      <span *ngIf="!mobileView" class="title">Sân bay Đà Nẵng - Hội An</span>
+      <span *ngIf="mobileView" style="text-align: center" class="title">{{
+        "banner.titleMobile" | translate
+      }}</span>
+      <span *ngIf="!mobileView" class="title">{{
+        "banner.title" | translate
+      }}</span>
 
       <div class="desc-group">
-        <span class="desc-item">Đưa đón và khứ hồi.</span>
-        <span class="desc-item">Đặt lịch trước & thanh toán sau.</span>
-        <span class="desc-item"
-          >Giữ kế hoạch du lịch linh hoạt - đặt chỗ và không phải thanh toán
-          ngày hôm nay.</span
-        >
+        <span class="desc-item">{{ "banner.desc1" | translate }}</span>
+        <span class="desc-item">{{ "banner.desc2" | translate }}</span>
+        <span class="desc-item">{{ "banner.desc3" | translate }}</span>
       </div>
       <a class="btn-banner" href="tel:0935850076">
         <span class="icon fa-solid fa-phone"></span>
@@ -33,28 +31,27 @@
   <div class="container">
     <div class="desc">
       <div class="title">
-        <span *ngIf="mobileView" class="text" style="text-align: center"
-          >Dịch vụ thuê xe <br />
-          Đà Nẵng - Hội An <br />
-          giá rẻ</span
-        >
-        <span *ngIf="!mobileView" class="text"
-          >Dịch vụ thuê xe Đà Nẵng - Hội An giá rẻ</span
-        >
+        <span *ngIf="mobileView" class="text" style="text-align: center">{{
+          "priceList.titleMobile" | translate
+        }}</span>
+        <span *ngIf="!mobileView" class="text">{{
+          "priceList.title" | translate
+        }}</span>
         <span class="value">www.xehoiandanang.vn</span>
       </div>
       <div class="contact">
         <span class="text">
-          Xe chất lượng cao – Đón và trả tận nơi – Wifi – Hỗ trợ 24/7 từ bộ phận
-          chăm sóc khách hàng của chúng tôi
+          {{ "priceList.desc" | translate }}
         </span>
         <div class="info">
-          <div class="text">Gọi để đặt xe:</div>
+          <div class="text">{{ "priceList.callMe" | translate }}</div>
           <a class="btn-phone" href="tel:0935850076">
             <span class="icon fa-solid fa-phone"></span>
             <span class="phone-number">0935 850 076</span>
           </a>
-          <button style="display: none">Đặt xe online</button>
+          <button style="display: none">
+            {{ "priceList.bookingOnline" | translate }}
+          </button>
         </div>
       </div>
     </div>
@@ -66,13 +63,12 @@
       >
         <div class="header">
           <div class="destination">
-            <span class="text">XE ĐÀ NẴNG</span>
+            <span class="text">{{ "priceList.priceList1" | translate }}</span>
             <span class="icon fa-solid fa-right-left"></span>
-            <span class="text">HỘI AN</span>
+            <span class="text">{{ "priceList.priceList2" | translate }}</span>
           </div>
           <div class="description">
-            ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI HỘI AN HOẶC
-            NGƯỢC LẠI.
+            {{ "priceList.priceList3" | translate }}
           </div>
         </div>
         <div class="table">
@@ -83,18 +79,18 @@
               <th></th>
             </tr>
             <tr>
-              <td>Xe 4 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList4" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>250.000 vnđ</td>
             </tr>
             <tr>
-              <td>Xe 7 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList6" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>300.000 vnđ</td>
             </tr>
             <tr>
-              <td>Xe 16 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList7" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>450.000 vnđ</td>
             </tr>
           </table>
@@ -109,13 +105,12 @@
       <div [class.price-item-mobile]="mobileView" class="price-item col">
         <div class="header">
           <div class="destination">
-            <span class="text">XE ĐÀ NẴNG</span>
+            <span class="text">{{ "priceList.priceList1" | translate }}</span>
             <span class="icon fa-solid fa-right-left"></span>
-            <span class="text">VINPEARL NAM HỘI AN</span>
+            <span class="text">{{ "priceList.priceList8" | translate }}</span>
           </div>
           <div class="description">
-            ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI BÀ NÀ HILLS.
-            HOẶC NGƯỢC LẠI.
+            {{ "priceList.priceList9" | translate }}
           </div>
         </div>
         <div class="table">
@@ -126,18 +121,18 @@
               <th></th>
             </tr>
             <tr>
-              <td>Xe 4 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList4" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>400.000 vnđ</td>
             </tr>
             <tr>
-              <td>Xe 7 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList6" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>450.000 vnđ</td>
             </tr>
             <tr>
-              <td>Xe 16 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList7" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>650.000 vnđ</td>
             </tr>
           </table>
@@ -158,12 +153,12 @@
       >
         <div class="header">
           <div class="destination">
-            <span class="text">XE HỘI AN</span>
+            <span class="text">{{ "priceList.priceList10" | translate }}</span>
             <span class="icon fa-solid fa-right-left"></span>
-            <span class="text">HUẾ</span>
+            <span class="text">{{ "priceList.priceList11" | translate }}</span>
           </div>
           <div class="description">
-            ĐÓN KHÁCH TẠI KHÁCH SẠN TỪ HỘI AN ĐI TP HUẾ. HOẶC NGƯỢC LẠI .
+            {{ "priceList.priceList12" | translate }}
           </div>
         </div>
         <div class="table table-custom">
@@ -178,13 +173,13 @@
                 rowspan="2"
                 style="text-align: center; vertical-align: middle"
               >
-                Xe 4 chỗ
+                {{ "priceList.priceList4" | translate }}
               </td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>1.500.000 vnđ</td>
             </tr>
             <tr>
-              <td>2 chiều</td>
+              <td>{{ "priceList.priceList13" | translate }}</td>
               <td>2.000.000 vnđ</td>
             </tr>
             <tr>
@@ -196,13 +191,17 @@
                   background-color: #f0f3f5;
                 "
               >
-                Xe 7 chỗ
+                {{ "priceList.priceList6" | translate }}
               </td>
-              <td style="background-color: #f0f3f5">1 chiều</td>
+              <td style="background-color: #f0f3f5">
+                {{ "priceList.priceList5" | translate }}
+              </td>
               <td style="background-color: #f0f3f5">1.800.000 vnđ</td>
             </tr>
             <tr>
-              <td style="background-color: #f0f3f5">2 chiều</td>
+              <td style="background-color: #f0f3f5">
+                {{ "priceList.priceList13" | translate }}
+              </td>
               <td style="background-color: #f0f3f5">2.400.000 vnđ</td>
             </tr>
             <tr>
@@ -210,13 +209,13 @@
                 rowspan="2"
                 style="text-align: center; vertical-align: middle"
               >
-                Xe 16 chỗ
+                {{ "priceList.priceList7" | translate }}
               </td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>2.000.000 vnđ</td>
             </tr>
             <tr>
-              <td>2 chiều</td>
+              <td>{{ "priceList.priceList13" | translate }}</td>
               <td>3.000.000 vnđ</td>
             </tr>
           </table>
@@ -231,13 +230,12 @@
       <div class="price-item col" [class.price-item-mobile]="mobileView">
         <div class="header">
           <div class="destination">
-            <span class="text">XE ĐÀ NẴNG</span>
+            <span class="text">{{ "priceList.priceList1" | translate }}</span>
             <span class="icon fa-solid fa-right-left"></span>
-            <span class="text">HUẾ</span>
+            <span class="text">{{ "priceList.priceList11" | translate }}</span>
           </div>
           <div class="description">
-            ĐÓN TẠI SÂN BAY , GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI TP HUẾ. HOẶC
-            NGƯỢC LẠI.
+            {{ "priceList.priceList14" | translate }}
           </div>
         </div>
         <div class="table table-custom">
@@ -252,13 +250,13 @@
                 rowspan="2"
                 style="text-align: center; vertical-align: middle"
               >
-                Xe 4 chỗ
+                {{ "priceList.priceList4" | translate }}
               </td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>1.400.000 vnđ</td>
             </tr>
             <tr>
-              <td>2 chiều</td>
+              <td>{{ "priceList.priceList13" | translate }}</td>
               <td>1.900.000 vnđ</td>
             </tr>
             <tr>
@@ -270,13 +268,17 @@
                   background-color: #f0f3f5;
                 "
               >
-                Xe 7 chỗ
+                {{ "priceList.priceList6" | translate }}
               </td>
-              <td style="background-color: #f0f3f5">1 chiều</td>
+              <td style="background-color: #f0f3f5">
+                {{ "priceList.priceList5" | translate }}
+              </td>
               <td style="background-color: #f0f3f5">1.700.000 vnđ</td>
             </tr>
             <tr>
-              <td style="background-color: #f0f3f5">2 chiều</td>
+              <td style="background-color: #f0f3f5">
+                {{ "priceList.priceList13" | translate }}
+              </td>
               <td style="background-color: #f0f3f5">2.200.000 vnđ</td>
             </tr>
             <tr>
@@ -284,13 +286,13 @@
                 rowspan="2"
                 style="text-align: center; vertical-align: middle"
               >
-                Xe 16 chỗ
+                {{ "priceList.priceList7" | translate }}
               </td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>2.000.000 vnđ</td>
             </tr>
             <tr>
-              <td>2 chiều</td>
+              <td>{{ "priceList.priceList13" | translate }}</td>
               <td>2.800.000 vnđ</td>
             </tr>
           </table>
@@ -311,12 +313,12 @@
       >
         <div class="header">
           <div class="destination">
-            <span class="text">XE HỘI AN</span>
+            <span class="text">{{ "priceList.priceList10" | translate }}</span>
             <span class="icon fa-solid fa-right-left"></span>
-            <span class="text">BÀ NÀ HILLS</span>
+            <span class="text">{{ "priceList.priceList14" | translate }}</span>
           </div>
           <div class="description">
-            ĐÓN TẠI KHÁCH SẠN, TỪ HỘI AN ĐI BÀ NÀ HILL. HOẶC NGƯỢC LẠI.
+            {{ "priceList.priceList16" | translate }}
           </div>
         </div>
         <div class="table table-custom">
@@ -331,13 +333,13 @@
                 rowspan="2"
                 style="text-align: center; vertical-align: middle"
               >
-                Xe 4 chỗ
+                {{ "priceList.priceList4" | translate }}
               </td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>600.000 vnđ</td>
             </tr>
             <tr>
-              <td>2 chiều</td>
+              <td>{{ "priceList.priceList13" | translate }}</td>
               <td>1.050.000 vnđ</td>
             </tr>
             <tr>
@@ -349,13 +351,17 @@
                   background-color: #f0f3f5;
                 "
               >
-                Xe 7 chỗ
+                {{ "priceList.priceList6" | translate }}
               </td>
-              <td style="background-color: #f0f3f5">1 chiều</td>
+              <td style="background-color: #f0f3f5">
+                {{ "priceList.priceList5" | translate }}
+              </td>
               <td style="background-color: #f0f3f5">700.000 vnđ</td>
             </tr>
             <tr>
-              <td style="background-color: #f0f3f5">2 chiều</td>
+              <td style="background-color: #f0f3f5">
+                {{ "priceList.priceList13" | translate }}
+              </td>
               <td style="background-color: #f0f3f5">1.250.000 vnđ</td>
             </tr>
             <tr>
@@ -363,13 +369,13 @@
                 rowspan="2"
                 style="text-align: center; vertical-align: middle"
               >
-                Xe 16 chỗ
+                {{ "priceList.priceList7" | translate }}
               </td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>900.000 vnđ</td>
             </tr>
             <tr>
-              <td>2 chiều</td>
+              <td>{{ "priceList.priceList13" | translate }}</td>
               <td>1.600.000 vnđ</td>
             </tr>
           </table>
@@ -384,12 +390,12 @@
       <div class="price-item col" [class.price-item-mobile]="mobileView">
         <div class="header">
           <div class="destination">
-            <span class="text">XE HỘI AN</span>
+            <span class="text">{{ "priceList.priceList10" | translate }}</span>
             <span class="icon fa-solid fa-right-left"></span>
-            <span class="text">VINPEARL NAM HỘI AN</span>
+            <span class="text">{{ "priceList.priceList8" | translate }}</span>
           </div>
           <div class="description">
-            ĐÓN TẠI KHÁCH SẠN TỪ HỘI AN ĐI VINPEARL NAM HỘI AN. HOẶC NGƯỢC LẠI.
+            {{ "priceList.priceList17" | translate }}
           </div>
         </div>
         <div class="table">
@@ -400,18 +406,18 @@
               <th></th>
             </tr>
             <tr>
-              <td>Xe 4 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList4" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>220.000 vnđ</td>
             </tr>
             <tr>
-              <td>Xe 7 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList6" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>270.000 vnđ</td>
             </tr>
             <tr>
-              <td>Xe 16 chỗ</td>
-              <td>1 chiều</td>
+              <td>{{ "priceList.priceList7" | translate }}</td>
+              <td>{{ "priceList.priceList5" | translate }}</td>
               <td>350.000 vnđ</td>
             </tr>
           </table>
@@ -433,11 +439,8 @@
     <div class="container order">
       <div class="order-left">
         <img width="100%" src="./content/images/banner.png" alt="" />
-        <span class="title">Đặt xe trực tuyến ngay hôm nay</span>
-        <span class="desc"
-          >Đặt xe du lịch tham quan các điểm Đà Nẵng – Hội An, đón tiễn sân bay,
-          xe 1 chiều… cực đơn giản</span
-        >
+        <span class="title"> {{ "order.title" | translate }} </span>
+        <span class="desc"> {{ "order.desc" | translate }} </span>
         <a class="btn-footer" href="tel:0935850076">
           <span class="icon fa-solid fa-phone"></span>
           <span class="phone-number">0935 850 076</span>
@@ -447,7 +450,10 @@
         <form>
           <div class="form-group row">
             <div class="col-sm-12">
-              <input placeholder="Họ & Tên" class="form-control" />
+              <input
+                placeholder="{{ 'order.order7' | translate }}"
+                class="form-control"
+              />
             </div>
           </div>
           <div class="row form-group">
@@ -455,7 +461,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="Số điện thoại"
+                placeholder="{{ 'order.order8' | translate }}"
               />
             </div>
             <div class="col">
@@ -464,26 +470,38 @@
           </div>
           <div class="row form-group">
             <div class="col">
-              <input type="text" class="form-control" placeholder="Nơi đón" />
+              <input
+                type="text"
+                class="form-control"
+                placeholder="{{ 'order.order9' | translate }}"
+              />
             </div>
             <div class="col">
-              <input type="text" class="form-control" placeholder="Nơi đến" />
+              <input
+                type="text"
+                class="form-control"
+                placeholder="{{ 'order.order10' | translate }}"
+              />
             </div>
           </div>
           <div class="row form-group">
             <div class="col">
               <select class="form-control">
-                <option [defaultSelected]="true">Chọn loại xe</option>
-                <option>SEDEN 4 chỗ</option>
-                <option>SUV 7 chỗ</option>
-                <option>VAN 16 chỗ</option>
+                <option [defaultSelected]="true">
+                  {{ "order.order1" | translate }}
+                </option>
+                <option>{{ "order.order2" | translate }}</option>
+                <option>{{ "order.order3" | translate }}</option>
+                <option>{{ "order.order4" | translate }}</option>
               </select>
             </div>
             <div class="col">
               <select class="form-control">
-                <option [defaultSelected]="true">Chọn chiều đi</option>
-                <option>1 chiều</option>
-                <option>2 chiều</option>
+                <option [defaultSelected]="true">
+                  {{ "order.order5" | translate }}
+                </option>
+                <option>{{ "priceList.priceList5" | translate }}</option>
+                <option>{{ "priceList.priceList13" | translate }}</option>
               </select>
             </div>
           </div>
@@ -496,7 +514,7 @@
             <div class="col-sm-12">
               <textarea
                 class="form-control"
-                placeholder="Bạn có muốn chúng tôi giúp gì không? (VD: số hiệu chuyến bay, đến sớm 15 phút)"
+                placeholder="{{ 'order.order11' | translate }}"
                 aria-label="With textarea"
               ></textarea>
             </div>
@@ -510,7 +528,7 @@
               style="text-align: center"
               class="btn btn-danger"
             >
-              Đặt xe ngay
+              {{ "order.order6" | translate }}
             </button>
           </div>
         </form>
