--- a/src/app/gioi-thieu/gioi-thieu.component.html
+++ b/src/app/gioi-thieu/gioi-thieu.component.html
@@ -2,22 +2,20 @@
   <div class="note">
     <div class="detail">
       <span style="margin-bottom: 20px">
-        <span style="color: #ed1c24; font-weight: 700"
-          >CÔNG TY TNHH MTV B&M TRAVEL</span
-        >
-        là <span style="font-weight: 700">công ty chuyên xe du lịch</span> Đà
-        Nẵng, Hội An, Bà Nà, Cù Lao Chàm, Mỹ Sơn, Đèo Hải Vân, Lăng Cô, Huế,
-        Quảng Ngãi…,
+        <span style="color: #ed1c24; font-weight: 700">{{
+          "introduce.intro1" | translate
+        }}</span>
+        {{ "introduce.intro2" | translate }}
+        <span style="font-weight: 700">{{
+          "introduce.intro3" | translate
+        }}</span>
+        {{ "introduce.intro4" | translate }}
       </span>
       <span style="margin-bottom: 20px">
-        Với 20 chiếc xe từ 4-16 chỗ ngồi đời mới, sang trọng đáp ứng đầy đủ cho
-        khách du lịch lẻ, khách đi theo đoàn. Đội ngũ tài xế nhiều kinh nghiệm,
-        thân thiện, vui vẻ.
+        {{ "introduce.intro5" | translate }}
       </span>
       <span style="margin-bottom: 20px">
-        Bên cạnh đó, Công Ty chúng tôi chuyên tổ chức các tour du lịch sinh thái
-        như Tour du lịch Làng rau Trà Quế, Tour du lịch Làng chài Thanh Nam,
-        Làng gốm Thanh Hà & Làng mộc Kim Bồng…
+        {{ "introduce.intro6" | translate }}
       </span>
     </div>
     <div class="image">
@@ -30,85 +28,60 @@
     </div>
   </div>
   <div class="benefits">
-    <span class="title">Những lợi ích của khách hàng</span>
-    <span class="title-desc"
-      >khi sử dụng dịch vụ của Công Ty TNHH MTV Dịch Vụ Du Lịch B&M Travel</span
-    >
+    <span class="title">{{ "introduce.intro7" | translate }}</span>
+    <span class="title-desc">{{ "introduce.intro8" | translate }}</span>
     <div class="list-benefits">
       <div class="item">
         <!--        <div class="icon">-->
         <!--        </div>-->
         <div class="title">
-          DỊCH VỤ CHO THUÊ XE ĐƯA ĐÓN SÂN BAY CHUYÊN NGHIỆP, UY TÍN
+          {{ "introduce.intro17" | translate }}
         </div>
         <div class="desc">
-          Chuyên nghiệp từ việc tiếp nhận thông tin khách hàng đến việc tư vấn
-          và cung cấp dịch vụ cho thuê xe, luôn luôn đảm bảo đúng thời gian, tài
-          xế kinh nghiệm, đặt sự an toàn và lợi ích của khách hàng lên đầu.
+          {{ "introduce.intro18" | translate }}
         </div>
       </div>
       <div class="item">
         <!--        <div class="icon"></div>-->
         <div class="title">
-          XE ĐƯA ĐÓN SÂN BAY ĐỜI MỚI, HIỆN ĐẠI, TIỆN NGHI ĐẦY ĐỦ
+          {{ "introduce.intro19" | translate }}
         </div>
         <div class="desc">
-          Luôn luôn đổi mới, luôn luôn lắng nghe khách hàng nên chúng tôi luôn
-          luôn mang đến cho bạn phương tiện đưa đón hiện đại nhất để đáp ứng nhu
-          cầu ngày càng cao của khách hàng.
+          {{ "introduce.intro20" | translate }}
         </div>
       </div>
       <div class="item">
         <!--        <div class="icon"></div>-->
         <div class="title">
-          THUÊ XE SÂN BAY VỚI ĐỘI NGŨ NHÂN VIÊN KINH NGHIỆM, TẬN TÌNH
+          {{ "introduce.intro21" | translate }}
         </div>
         <div class="desc">
-          Từ nhân viên tư vấn đến nhân viên lái xe đều có kinh nghiệm lâu năm
-          luôn luôn đặt chữ tâm lên hàng đầu. Nhân viên lái xe luôn đặt sự an
-          toàn của khách hàng trên hết và phục vụ khách hàng với thái độ tôn
-          trọng, nhiệt tình nhất. Luôn mang đến sự hài lòng đến khách hàng.
+          {{ "introduce.intro22" | translate }}
         </div>
       </div>
     </div>
     <div class="note-price">
-      Giá chỉ từ 250.000 vnđ xe 4 chỗ; 300.000 xe 7 chỗ ; 450.000 xe 16 chỗ.
-      Công Ty TNHH MTV Dịch Vụ – Du Lịch B&M Travel xin cam kết sẽ cung cấp cho
-      các bạn các phương thức di chuyển từ Đà Nẵng đi Hội An và ngược lại một
-      cách hiệu quả, tiết kiệm và an toàn nhất.
+      {{ "introduce.intro9" | translate }}
     </div>
   </div>
   <div class="detail-car">
     <div class="item">
-      <span class="title">Dòng Xe 4 Chỗ :</span>
-      <span class="desc"
-        >Xe 4 chỗ của chúng tôi với các dòng xe mới nhất, cùng với các tiện nghi
-        hiện đại nhất với số lượng lớn nhằm đáp ứng đầy đủ các yêu cầu của khách
-        hàng và mong muốn mang đến cho quý khách một dịch vụ chuyên nghiệp với
-        các loại xe như : Vios , Kia Cerato , Elantra…</span
-      >
+      <span class="title">{{ "introduce.intro10" | translate }}</span>
+      <span class="desc">{{ "introduce.intro11" | translate }}</span>
     </div>
     <div class="item">
-      <span class="title">Dòng Xe 7 Chỗ :</span>
-      <span class="desc"
-        >Xe 7 chỗ như: Fortuner , Mitsubishi , Xpander, 7 chỗ tiện nghi cao cấp,
-        với lái xe kinh nghiệm lâu năm chúng tôi mang đến dịch vụ an toàn nhất
-        cho khách hàng.</span
-      >
+      <span class="title">{{ "introduce.intro12" | translate }}</span>
+      <span class="desc">{{ "introduce.intro13" | translate }}</span>
     </div>
     <div class="item">
-      <span class="title">Dòng Xe 16 Chỗ :</span>
-      <span class="desc"
-        >Xe 16 chỗ dùng để đưa đón một nhóm số lượng lớn khách hàng có thể là
-        các khách du lịch của các công ty. có những loại xe sau: Xe Ford
-        Transit, Hyundai Solati…</span
-      >
+      <span class="title">{{ "introduce.intro14" | translate }}</span>
+      <span class="desc">{{ "introduce.intro15" | translate }}</span>
     </div>
   </div>
   <div class="map">
     <div class="title">
       <div class="line"></div>
-      <div class="text">BẢN ĐỒ</div>
+      <div class="text">{{ "introduce.intro16" | translate }}</div>
       <div class="line"></div>
     </div>
     <div class="map-detail">
