--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -23,8 +23,7 @@
     width: 56px;
     height: 56px;
     position: absolute;
-    left: 0
-  ;
+    left: 0;
     img {
       height: 56px;
     }
@@ -118,4 +117,8 @@
   &.active {
     transform: translateX(0);
   }
+}
+
+.dropdown-toggle::after {
+  display: none;
 }
